--- a/directbak.yaml
+++ b/directbak.yaml
@@ -14,7 +14,6 @@ payload:
   - '+.001.com'
   - '+.001133.app'
   - '+.0012482.com'
-  - '+.001cndc.com'
   - '+.001daima.com'
   - '+.001en.com'
   - '+.001jm.com'
@@ -1814,7 +1813,6 @@ payload:
   - '+.1kejian.com'
   - '+.1kkk.com'
   - '+.1kmxc.com'
-  - '+.1ksz.com'
   - '+.1kuang.com'
   - '+.1kx.me'
   - '+.1kxun.com'
@@ -2987,7 +2985,6 @@ payload:
   - '+.366translation.com'
   - '+.36706.com'
   - '+.3673.com'
-  - '+.367783.net'
   - '+.368mall.com'
   - '+.368tea.com'
   - '+.369110.xyz'
@@ -3291,7 +3288,6 @@ payload:
   - '+.3yx.com'
   - '+.3zhijk.com'
   - '+.3zmuseum.com'
-  - '+.3zxsw.com'
   - '+.4-xiang.com'
   - '+.4.cm'
   - '+.400-lighting.com'
@@ -3348,7 +3344,6 @@ payload:
   - '+.400web.com'
   - '+.402043.com'
   - '+.40279.com'
-  - '+.4040001.com'
   - '+.40407.com'
   - '+.404600.com'
   - '+.404forest.com'
@@ -3620,6 +3615,7 @@ payload:
   - '+.51.net'
   - '+.5100.net'
   - '+.510560.com'
+  - '+.510xds.com'
   - '+.511.la'
   - '+.511023.com'
   - '+.51110.com'
@@ -3670,7 +3666,6 @@ payload:
   - '+.516a.com'
   - '+.516edu.com'
   - '+.516ly.com'
-  - '+.516tx.com'
   - '+.5173.com'
   - '+.5173cdn.com'
   - '+.517best.com'
@@ -4530,7 +4525,6 @@ payload:
   - '+.53info.com'
   - '+.53iq.com'
   - '+.53kf.com'
-  - '+.53kjw.com'
   - '+.53miji.com'
   - '+.53nic.com'
   - '+.53r.com'
@@ -5142,6 +5136,7 @@ payload:
   - '+.63243.com'
   - '+.6328.net'
   - '+.632news.com'
+  - '+.636935.com'
   - '+.6383.com'
   - '+.639311.com'
   - '+.6399868.com'
@@ -5518,7 +5513,6 @@ payload:
   - '+.7280.com'
   - '+.7298.com'
   - '+.72bn.com'
-  - '+.72book.com'
   - '+.72byte.com'
   - '+.72bz.com'
   - '+.72crm.com'
@@ -6933,7 +6927,6 @@ payload:
   - '+.99danji.com'
   - '+.99ddd.com'
   - '+.99down.com'
-  - '+.99downer.com'
   - '+.99dushu.com'
   - '+.99dw.com'
   - '+.99eo.com'
@@ -8073,7 +8066,6 @@ payload:
   - '+.akeyun.com'
   - '+.akhtm.com'
   - '+.akhy.com'
-  - '+.akinoheya.com'
   - '+.akkogear.com'
   - '+.akng.net'
   - '+.akniu.com'
@@ -9173,6 +9165,7 @@ payload:
   - '+.astorpiano.com'
   - '+.astron.ac'
   - '+.astropulsion.com'
+  - '+.asurada.zone'
   - '+.asussmart.com'
   - '+.asussz-zp.com'
   - '+.aswetalk.net'
@@ -10074,7 +10067,6 @@ payload:
   - '+.bbcyw.com'
   - '+.bbdservice.com'
   - '+.bbdup.com'
-  - '+.bbdzj.com'
   - '+.bbercn.com'
   - '+.bbfoxgame.com'
   - '+.bbfstore.com'
@@ -10569,6 +10561,7 @@ payload:
   - '+.bhzpw.com'
   - '+.bhzyxy.net'
   - '+.biacgn.com'
+  - '+.bianbao.net'
   - '+.biancheng.net'
   - '+.bianchengquan.com'
   - '+.biancui.com'
@@ -10609,7 +10602,6 @@ payload:
   - '+.biaozhiku.com'
   - '+.biaozhun.org'
   - '+.biaozhun8.com'
-  - '+.biaozhuncang.com'
   - '+.biaozhuns.com'
   - '+.biaozhunyisheng.com'
   - '+.biask.com'
@@ -11008,7 +11000,6 @@ payload:
   - '+.bj65z.com'
   - '+.bj96007.com'
   - '+.bjadn.net'
-  - '+.bjaodidazhong.com'
   - '+.bjatv.com'
   - '+.bjbaodao.net'
   - '+.bjbeifangjx.com'
@@ -11676,7 +11667,6 @@ payload:
   - '+.bqimg.com'
   - '+.bqpoint.com'
   - '+.bqq8.com'
-  - '+.bqrank.net'
   - '+.bqrdh.com'
   - '+.bqteng.com'
   - '+.bragood.com'
@@ -12122,7 +12112,6 @@ payload:
   - '+.bzxz.net'
   - '+.bzxzk.net'
   - '+.bzzfq5.com'
-  - '+.bzzss.com'
   - '+.c-119.com'
   - '+.c-3.moe'
   - '+.c-canyin.com'
@@ -12457,7 +12446,6 @@ payload:
   - '+.car2sharechina.com'
   - '+.car388.com'
   - '+.carben.me'
-  - '+.carbonframe.com'
   - '+.carbonscn.com'
   - '+.carcav.com'
   - '+.carcdn.com'
@@ -15786,7 +15774,6 @@ payload:
   - '+.cnwebe.com'
   - '+.cnweblog.com'
   - '+.cnwebshow.com'
-  - '+.cnweilo.com'
   - '+.cnweisou.com'
   - '+.cnwen.net'
   - '+.cnwenshi.net'
@@ -16340,7 +16327,6 @@ payload:
   - '+.cqkx.com'
   - '+.cqkytq.com'
   - '+.cqleba.com'
-  - '+.cqlglg.com'
   - '+.cqlinrui.com'
   - '+.cqliving.com'
   - '+.cqlp.com'
@@ -17057,7 +17043,6 @@ payload:
   - '+.cztv.tv'
   - '+.cztvcloud.com'
   - '+.czur.com'
-  - '+.czvv.com'
   - '+.czvv.net'
   - '+.czwsg5.com'
   - '+.czxixi.com'
@@ -17979,6 +17964,7 @@ payload:
   - '+.deyang5.com'
   - '+.deyatech.com'
   - '+.deyayk.com'
+  - '+.deyeehome.com'
   - '+.deyi.com'
   - '+.deyi.net'
   - '+.deyijijin.org'
@@ -18178,7 +18164,6 @@ payload:
   - '+.dianjinzs.com'
   - '+.dianjiqi.com'
   - '+.diankeji.com'
-  - '+.dianler.com'
   - '+.dianli.com'
   - '+.dianli08.com'
   - '+.dianliang8.com'
@@ -20510,7 +20495,6 @@ payload:
   - '+.en998.com'
   - '+.ename.com'
   - '+.ename.net'
-  - '+.enamourmall.com'
   - '+.enappstore.com'
   - '+.enbowang.com'
   - '+.enbrands.com'
@@ -20630,7 +20614,6 @@ payload:
   - '+.epweike.com'
   - '+.epwitkey.com'
   - '+.epwk.com'
-  - '+.epwksx.com'
   - '+.epzcw.com'
   - '+.eqbyc.com'
   - '+.eqding.com'
@@ -22372,6 +22355,7 @@ payload:
   - '+.freelycode.com'
   - '+.freelynet.com'
   - '+.freemancn.com'
+  - '+.freemdict.com'
   - '+.freemindworld.com'
   - '+.freemoban.com'
   - '+.freemudgame.com'
@@ -22763,7 +22747,6 @@ payload:
   - '+.fzmama.net'
   - '+.fzmeetdecor.com'
   - '+.fzn.cc'
-  - '+.fzpig.com'
   - '+.fzrsrc.com'
   - '+.fzshbx.org'
   - '+.fzsjob.com'
@@ -23816,7 +23799,6 @@ payload:
   - '+.godeve.com'
   - '+.godic.net'
   - '+.godida.com'
-  - '+.godiscoder.com'
   - '+.godiy8.com'
   - '+.godns.site'
   - '+.godo.pub'
@@ -25927,6 +25909,7 @@ payload:
   - '+.hcjsk120.com'
   - '+.hcl100.com'
   - '+.hcmiraefund.com'
+  - '+.hcnamecdns.com'
   - '+.hcocoa.com'
   - '+.hcqixinhb.com'
   - '+.hcshebao.com'
@@ -26037,7 +26020,6 @@ payload:
   - '+.hebeigwy.org'
   - '+.hebeijd.com'
   - '+.hebeinongzi.com'
-  - '+.hebeisy.com'
   - '+.hebeiyichen.com'
   - '+.hebeizhouji.com'
   - '+.hebgtjt.com'
@@ -26216,7 +26198,6 @@ payload:
   - '+.henanjianling.com'
   - '+.henanjubao.com'
   - '+.henanlvyi.com'
-  - '+.henansenli.com'
   - '+.henanyouth.com'
   - '+.henbt.com'
   - '+.hencin.com'
@@ -30547,6 +30528,7 @@ payload:
   - '+.iworm.net'
   - '+.iwpai.com'
   - '+.iwshang.com'
+  - '+.iwshuma.com'
   - '+.iwucha.com'
   - '+.iwwwwwi.com'
   - '+.iwxapi.com'
@@ -33081,6 +33063,7 @@ payload:
   - '+.jzsgzmhjyxgs.com'
   - '+.jzshequ.com'
   - '+.jzsjyksy.com'
+  - '+.jzsousuo.com'
   - '+.jzsxinyudianqi.com'
   - '+.jzsyishu.com'
   - '+.jztdc.com'
@@ -35849,7 +35832,6 @@ payload:
   - '+.linkbroad.com'
   - '+.linkbux.com'
   - '+.linkchant.com'
-  - '+.linkchic.com'
   - '+.linkease.com'
   - '+.linked-f.com'
   - '+.linkedbyx.com'
@@ -36293,7 +36275,6 @@ payload:
   - '+.lmwljz.com'
   - '+.lmxxxz.com'
   - '+.lmyd5.com'
-  - '+.lmyidc.com'
   - '+.lnamphp.com'
   - '+.lncldapi.com'
   - '+.lncnw.com'
@@ -36822,7 +36803,6 @@ payload:
   - '+.lukuanart.com'
   - '+.lul8.com'
   - '+.lulala.com'
-  - '+.lulaohan.com'
   - '+.lulu77.com'
   - '+.lulufind.com'
   - '+.lum114.com'
@@ -37574,7 +37554,6 @@ payload:
   - '+.maogx.win'
   - '+.maoha.com'
   - '+.maohaha.com'
-  - '+.maohuashiye.com'
   - '+.maoken.com'
   - '+.maoln.com'
   - '+.maomaoche.com'
@@ -37887,6 +37866,7 @@ payload:
   - '+.meet99.com'
   - '+.meetfave.com'
   - '+.meethall.com'
+  - '+.meeting666.com'
   - '+.meetingmeet.com'
   - '+.meetingq.com'
   - '+.meetlawyer.com'
@@ -39201,7 +39181,6 @@ payload:
   - '+.mowowo.com'
   - '+.mowuhe.com'
   - '+.mox.moe'
-  - '+.moxdao.com'
   - '+.moxfive.xyz'
   - '+.moxiai.com'
   - '+.moxian.com'
@@ -39650,7 +39629,6 @@ payload:
   - '+.myhuaweicloud.com'
   - '+.myhuilv.com'
   - '+.myhwclouds.com'
-  - '+.myicloud.vip'
   - '+.myie.me'
   - '+.myie9.com'
   - '+.myip.la'
@@ -41578,7 +41556,6 @@ payload:
   - '+.oudapay.com'
   - '+.oudeqi.com'
   - '+.oudiscover.com'
-  - '+.ouerrepair.com'
   - '+.oufa-travel.com'
   - '+.oufengblog.com'
   - '+.oufusoft.com'
@@ -44392,7 +44369,6 @@ payload:
   - '+.qt6.com'
   - '+.qt86.com'
   - '+.qtav.org'
-  - '+.qtbcw.com'
   - '+.qtbig.com'
   - '+.qtccolor.com'
   - '+.qtcn.org'
@@ -51538,7 +51514,6 @@ payload:
   - '+.tmall.com'
   - '+.tmall.hk'
   - '+.tmall.ru'
-  - '+.tmallma.com'
   - '+.tmallvvv.com'
   - '+.tmbbs.com'
   - '+.tmcdn.net'
@@ -51908,6 +51883,7 @@ payload:
   - '+.tpbook.com'
   - '+.tpcdnde88de.com'
   - '+.tpengyun.com'
+  - '+.tpg2i1p7.com'
   - '+.tpkey.com'
   - '+.tplife.com'
   - '+.tplm123.com'
@@ -52517,6 +52493,7 @@ payload:
   - '+.tvmcloud.com'
   - '+.tvmining.com'
   - '+.tvn.cc'
+  - '+.tvnwang.com'
   - '+.tvoao.com'
   - '+.tvos.com'
   - '+.tvscn.com'
@@ -52930,6 +52907,7 @@ payload:
   - '+.uhomes.com'
   - '+.uhouzz.com'
   - '+.uhuitong.com'
+  - '+.uhzcdn.com'
   - '+.ui001.com'
   - '+.ui100day.com'
   - '+.ui63.com'
@@ -54417,7 +54395,6 @@ payload:
   - '+.wangyou.com'
   - '+.wangyou2.com'
   - '+.wangyuan.com'
-  - '+.wangyuegame.com'
   - '+.wangyutang.com'
   - '+.wangyuwang.com'
   - '+.wangzhan123.net'
@@ -57372,7 +57349,6 @@ payload:
   - '+.xian-tourism.com'
   - '+.xianba.net'
   - '+.xianbai.me'
-  - '+.xianbao.net'
   - '+.xianbdj.com'
   - '+.xianbeikeji.com'
   - '+.xianbey.com'
@@ -59464,7 +59440,6 @@ payload:
   - '+.yaability.com'
   - '+.yaahe.com'
   - '+.yabo.com'
-  - '+.yabo2020.com'
   - '+.yabodns.com'
   - '+.yabolive.com'
   - '+.yabovip2029.com'
@@ -59794,7 +59769,6 @@ payload:
   - '+.ycwanju.com'
   - '+.ycwb.com'
   - '+.ycwhys.com'
-  - '+.ycwtbgsb.com'
   - '+.ycxfgroup.com'
   - '+.ycxjtd.com'
   - '+.ycyggr.com'
@@ -60749,6 +60723,7 @@ payload:
   - '+.yluu.com'
   - '+.ylwl.cc'
   - '+.ylws.net'
+  - '+.ylwt33.com'
   - '+.ylwyw.com'
   - '+.ylxbxgtg.com'
   - '+.ylxdtww.com'
@@ -63244,7 +63219,6 @@ payload:
   - '+.zhidesoft.com'
   - '+.zhidian3g.com'
   - '+.zhidieyun.com'
-  - '+.zhiding0603.com'
   - '+.zhidj.com'
   - '+.zhidmai.com'
   - '+.zhiduopc.com'
@@ -63566,6 +63540,7 @@ payload:
   - '+.zhongyao1.com'
   - '+.zhongyaoyi.com'
   - '+.zhongye.net'
+  - '+.zhongyejy.com'
   - '+.zhongyiiot.com'
   - '+.zhongyiju360.com'
   - '+.zhongyishangwu.com'
@@ -64855,7 +64830,6 @@ payload:
   - '+.zxgongshui.com'
   - '+.zxgzs.com'
   - '+.zxgzw.com'
-  - '+.zxh.site'
   - '+.zxhgroup.com'
   - '+.zxhong.com'
   - '+.zxhsd.com'
