--- a/directbak.yaml
+++ b/directbak.yaml
@@ -43,7 +43,6 @@ payload:
   - '+.00817.com'
   - '+.0082tv.com'
   - '+.008321.com'
-  - '+.00853.la'
   - '+.0086crane.com'
   - '+.0086l.com'
   - '+.0086org.com'
@@ -920,7 +919,6 @@ payload:
   - '+.114park.com'
   - '+.114photo.com'
   - '+.114piaowu.com'
-  - '+.114pifa.com'
   - '+.114pinpai.com'
   - '+.114px.com'
   - '+.114qy.com'
@@ -3470,6 +3468,7 @@ payload:
   - '+.46z5j5.xyz'
   - '+.47365.com'
   - '+.4738.com'
+  - '+.4743.uk'
   - '+.47473.com'
   - '+.474b.com'
   - '+.4765.com'
@@ -6586,7 +6585,6 @@ payload:
   - '+.92fox.com'
   - '+.92game.net'
   - '+.92hidc.net'
-  - '+.92jiangbei.com'
   - '+.92kaifa.com'
   - '+.92kk.com'
   - '+.92le.com'
@@ -8614,7 +8612,6 @@ payload:
   - '+.antuni.com'
   - '+.antutu.com'
   - '+.antutu.net'
-  - '+.antuzhi.com'
   - '+.antvr.com'
   - '+.antzk.com'
   - '+.anw.red'
@@ -8871,7 +8868,6 @@ payload:
   - '+.appicplay.com'
   - '+.appinn.com'
   - '+.appjiagu.com'
-  - '+.appjzy.com'
   - '+.appkaifa.com'
   - '+.appkefu.com'
   - '+.appkg.com'
@@ -9583,7 +9579,6 @@ payload:
   - '+.baidudaquan.com'
   - '+.baidufe.com'
   - '+.baidufree.com'
-  - '+.baidui.vip'
   - '+.baidulook.com'
   - '+.baidunongmin.com'
   - '+.baiduor.com'
@@ -10175,7 +10170,6 @@ payload:
   - '+.bdapark.com'
   - '+.bdatu.com'
   - '+.bdc-rays.com'
-  - '+.bdcdnimg.com'
   - '+.bdchina.com'
   - '+.bdcloudapi.com'
   - '+.bdclouddns.com'
@@ -13270,7 +13264,6 @@ payload:
   - '+.cgplayer.com'
   - '+.cgplusplus.com'
   - '+.cgptwd.com'
-  - '+.cgpx.org'
   - '+.cgris.net'
   - '+.cgsec.com'
   - '+.cgsfusion.com'
@@ -16315,7 +16308,6 @@ payload:
   - '+.cqjjnet.com'
   - '+.cqjnw.org'
   - '+.cqjob.com'
-  - '+.cqjsxx.com'
   - '+.cqjy.com'
   - '+.cqkdtui1.com'
   - '+.cqkeb.com'
@@ -16578,7 +16570,6 @@ payload:
   - '+.csjyzq.com'
   - '+.cskefu.com'
   - '+.cskule.com'
-  - '+.cskxjk.com'
   - '+.cslfans.com'
   - '+.cslou.com'
   - '+.cslyrc.com'
@@ -18704,6 +18695,7 @@ payload:
   - '+.dnsip.net'
   - '+.dnsis.net'
   - '+.dnsjia.com'
+  - '+.dnslv.com'
   - '+.dnsmeasurement.com'
   - '+.dnsmsn.com'
   - '+.dnsng.net'
@@ -19362,7 +19354,6 @@ payload:
   - '+.duoente.net'
   - '+.duoerpharmacy.com'
   - '+.duofriend.com'
-  - '+.duofull.com'
   - '+.duogouhui.com'
   - '+.duohou.net'
   - '+.duohui.co'
@@ -20707,7 +20698,6 @@ payload:
   - '+.esfimg.com'
   - '+.eshangle.com'
   - '+.eshanyao.com'
-  - '+.eshenan.com'
   - '+.eshenlin.com'
   - '+.eshimin.com'
   - '+.eshiyun.info'
@@ -25063,6 +25053,7 @@ payload:
   - '+.haianedu.net'
   - '+.haianw.com'
   - '+.haibao.com'
+  - '+.haibao123.xyz'
   - '+.haibaobaoxian.com'
   - '+.haibaoyl.com'
   - '+.haibaoyouxi.com'
@@ -25599,7 +25590,6 @@ payload:
   - '+.hapi123.net'
   - '+.hapimall.com'
   - '+.hapingapp.com'
-  - '+.hapiweb.com'
   - '+.haplat.net'
   - '+.happigo.com'
   - '+.happy24uk.com'
@@ -25909,6 +25899,7 @@ payload:
   - '+.hcjsk120.com'
   - '+.hcl100.com'
   - '+.hcmiraefund.com'
+  - '+.hcnamecdn.com'
   - '+.hcnamecdns.com'
   - '+.hcocoa.com'
   - '+.hcqixinhb.com'
@@ -29061,7 +29052,6 @@ payload:
   - '+.iduokan.net'
   - '+.iduvip.com'
   - '+.idwzx.com'
-  - '+.idyjy.com'
   - '+.idyzs.com'
   - '+.idzcp.com'
   - '+.idzoom.com'
@@ -31372,7 +31362,6 @@ payload:
   - '+.jiefuku.com'
   - '+.jiegames.com'
   - '+.jiegeng.com'
-  - '+.jiehuisoft.com'
   - '+.jiehun021.com'
   - '+.jiehun027.com'
   - '+.jiehunmishu.com'
@@ -33031,7 +33020,6 @@ payload:
   - '+.jz68888.com'
   - '+.jzb.com'
   - '+.jzbar.net'
-  - '+.jzbbc.com'
   - '+.jzbdc.com'
   - '+.jzcbank.com'
   - '+.jzchou.com'
@@ -35272,6 +35260,7 @@ payload:
   - '+.lensuo.com'
   - '+.lenwoo.com'
   - '+.lenzhao.com'
+  - '+.leo.moe'
   - '+.leo96.com'
   - '+.leoao-inc.com'
   - '+.leoao.com'
@@ -36091,12 +36080,14 @@ payload:
   - '+.liuyanzhao.com'
   - '+.liuyifei.cc'
   - '+.liuyingqiang.com'
+  - '+.liuzaoqi.com'
   - '+.liuzhichao.com'
   - '+.liuzhixiang.com'
   - '+.liuzongyang.com'
   - '+.liuzuo.com'
   - '+.liuzy88.com'
   - '+.live-era.com'
+  - '+.live-voip.com'
   - '+.live800.com'
   - '+.liveapp.ink'
   - '+.livechina.com'
@@ -39103,7 +39094,6 @@ payload:
   - '+.mopcn.com'
   - '+.mopei8.com'
   - '+.moper.me'
-  - '+.mopiaoyao.com'
   - '+.mopicer.com'
   - '+.mopoint.com'
   - '+.mopsky.com'
@@ -41003,7 +40993,6 @@ payload:
   - '+.ocd120.com'
   - '+.oceanbase.com'
   - '+.oceanbot-steam.com'
-  - '+.oceancnc.com'
   - '+.oceanengine.com'
   - '+.oceanlau.com'
   - '+.oceanol.com'
@@ -43439,7 +43428,6 @@ payload:
   - '+.qhdczzs.com'
   - '+.qhdfxkj.com'
   - '+.qhdgjj.com'
-  - '+.qhdjcbj.com'
   - '+.qhdnews.com'
   - '+.qhdok.com'
   - '+.qhdren.com'
@@ -43464,7 +43452,6 @@ payload:
   - '+.qhmed.com'
   - '+.qhmsg.com'
   - '+.qhnews.com'
-  - '+.qhnode.com'
   - '+.qhong.net'
   - '+.qhpcc.com'
   - '+.qhpk.net'
@@ -47798,7 +47785,6 @@ payload:
   - '+.shyuwl.com'
   - '+.shyuzhai.com'
   - '+.shywtb.com'
-  - '+.shyxcm.com'
   - '+.shyxi5.com'
   - '+.shyxwz.com'
   - '+.shyy6688.com'
@@ -50210,7 +50196,6 @@ payload:
   - '+.t262.com'
   - '+.t2cn.com'
   - '+.t3315.com'
-  - '+.t365777.com'
   - '+.t5.work'
   - '+.t56.net'
   - '+.t56jy.net'
@@ -52043,6 +52028,7 @@ payload:
   - '+.tryineapp.com'
   - '+.trylist.net'
   - '+.trymoka.com'
+  - '+.tryqkj.com'
   - '+.tryurbest.com'
   - '+.tryxue.com'
   - '+.ts-cooling.com'
@@ -52479,6 +52465,7 @@ payload:
   - '+.tvblack.com'
   - '+.tvbwind.com'
   - '+.tvcbook.com'
+  - '+.tvccc.org'
   - '+.tventry.com'
   - '+.tvfanqie.com'
   - '+.tvflnet.com'
@@ -56368,6 +56355,7 @@ payload:
   - '+.wsry18.xyz'
   - '+.wsssec.com'
   - '+.wstx.com'
+  - '+.wsurl.cc'
   - '+.wsview.com'
   - '+.wswebcdn.com'
   - '+.wswebcdn.info'
@@ -56498,6 +56486,7 @@ payload:
   - '+.wujiexueyuan.com'
   - '+.wujiit.com'
   - '+.wujinimg.com'
+  - '+.wujinkk.com'
   - '+.wujinpp.com'
   - '+.wujixiaoshuo.com'
   - '+.wukong.com'
@@ -63831,6 +63820,7 @@ payload:
   - '+.zhzyw.org'
   - '+.zhzzx.com'
   - '+.zi.com'
+  - '+.zi5.cc'
   - '+.ziben365.com'
   - '+.ziboga.com'
   - '+.zicaitou.com'
