--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2553,7 +2553,6 @@ payload:
   - '+.31food.com'
   - '+.31games.com'
   - '+.31gcjx.com'
-  - '+.31gear.com'
   - '+.31huiyi.com'
   - '+.31jc.com'
   - '+.31jf.com'
@@ -3912,7 +3911,6 @@ payload:
   - '+.51julebu.com'
   - '+.51junshi.com'
   - '+.51jyrc.com'
-  - '+.51jyzs.com'
   - '+.51kahui.com'
   - '+.51kaiye.com'
   - '+.51kanong.com'
@@ -4294,7 +4292,6 @@ payload:
   - '+.528btc.com'
   - '+.528day.com'
   - '+.5293.com'
-  - '+.5299shop.com'
   - '+.529c31.com'
   - '+.52ai.com'
   - '+.52aimo.com'
@@ -4893,7 +4890,6 @@ payload:
   - '+.5h.com'
   - '+.5ha.net'
   - '+.5hanjutv.com'
-  - '+.5hb.org'
   - '+.5hrc.com'
   - '+.5hte21mz.com'
   - '+.5i-training.net'
@@ -16895,7 +16891,6 @@ payload:
   - '+.cy-cdn.com'
   - '+.cy-email.com'
   - '+.cy.com'
-  - '+.cy12301.com'
   - '+.cy1990.com'
   - '+.cy2009.com'
   - '+.cy52.com'
@@ -17971,7 +17966,6 @@ payload:
   - '+.dezhuyun.com'
   - '+.df81.com'
   - '+.df9377.com'
-  - '+.dfafei.com'
   - '+.dfbgv.com'
   - '+.dfcfs.com'
   - '+.dfcfw.com'
@@ -18377,6 +18371,7 @@ payload:
   - '+.dingxiang-inc.com'
   - '+.dingxin66.com'
   - '+.dingxinhui.com'
+  - '+.dingxinwen.com'
   - '+.dingxuewen.com'
   - '+.dingyantec.com'
   - '+.dingyueads.com'
@@ -19191,7 +19186,6 @@ payload:
   - '+.dsdjclub.com'
   - '+.dsfdc.com'
   - '+.dsfof.com'
-  - '+.dsgho.com'
   - '+.dshigao.com'
   - '+.dshrc.com'
   - '+.dskb.co'
@@ -20710,7 +20704,6 @@ payload:
   - '+.eshzp.com'
   - '+.esinidc.com'
   - '+.esk365.com'
-  - '+.eskgn.com'
   - '+.esky8.com'
   - '+.eskysky.com'
   - '+.eslosity.com'
@@ -21242,7 +21235,6 @@ payload:
   - '+.fangmeileju.com'
   - '+.fangqk.com'
   - '+.fangshanzi.com'
-  - '+.fangshuitan888.com'
   - '+.fangsi.net'
   - '+.fangstar.com'
   - '+.fangtan007.com'
@@ -21667,6 +21659,7 @@ payload:
   - '+.fengfeng.cc'
   - '+.fenggeba.com'
   - '+.fenghenever.com'
+  - '+.fenghong.tech'
   - '+.fenghuaju.cc'
   - '+.fenghui.tv'
   - '+.fenghuidongman.com'
@@ -22379,7 +22372,6 @@ payload:
   - '+.frontjs.com'
   - '+.frontopen.com'
   - '+.frontwize.com'
-  - '+.frostming.com'
   - '+.frostwell.cc'
   - '+.frostwell.net'
   - '+.frostwing98.com'
@@ -22483,7 +22475,6 @@ payload:
   - '+.fuiou.com'
   - '+.fuioupay.com'
   - '+.fujiabin.com'
-  - '+.fujianlaser.com'
   - '+.fujianrc.com'
   - '+.fujiansme.com'
   - '+.fujieace.com'
@@ -22776,6 +22767,7 @@ payload:
   - '+.g7430.com'
   - '+.g77775555.com'
   - '+.g77776666.com'
+  - '+.g80mx.com'
   - '+.g88885555.com'
   - '+.g88886666.com'
   - '+.g8f8.com'
@@ -24799,6 +24791,7 @@ payload:
   - '+.gzhatao.com'
   - '+.gzhc365.com'
   - '+.gzhdcs.com'
+  - '+.gzhe.net'
   - '+.gzhhr.com'
   - '+.gzhifi.com'
   - '+.gzhphb.com'
@@ -25251,6 +25244,7 @@ payload:
   - '+.hanfei.net'
   - '+.hanfengcars.com'
   - '+.hanfugong.com'
+  - '+.hangfushi.com'
   - '+.hangge.com'
   - '+.hanghaimeng.com'
   - '+.hanghang666.com'
@@ -27090,7 +27084,6 @@ payload:
   - '+.hongyingfangshui.com'
   - '+.hongyu-qi.com'
   - '+.hongyue.com'
-  - '+.hongyunlww.com'
   - '+.hongyunvren.com'
   - '+.hongze.net'
   - '+.hongzetai.com'
@@ -27392,7 +27385,6 @@ payload:
   - '+.hsoow.com'
   - '+.hspress.net'
   - '+.hsr2013.com'
-  - '+.hssdg.com'
   - '+.hssdk.com'
   - '+.hssdtest.com'
   - '+.hssemi.com'
@@ -27625,7 +27617,6 @@ payload:
   - '+.huangpucn.com'
   - '+.huangqi1688.com'
   - '+.huangshaotian.com'
-  - '+.huangsw.com'
   - '+.huangwei.me'
   - '+.huangwei.pro'
   - '+.huangxinwei.com'
@@ -29172,7 +29163,6 @@ payload:
   - '+.ifresh.mobi'
   - '+.ifromvr.com'
   - '+.ifseclabs.com'
-  - '+.iftell.com'
   - '+.ifttl.com'
   - '+.ifukua.com'
   - '+.ifumanhua.net'
@@ -34722,7 +34712,6 @@ payload:
   - '+.langlangjiajiao.com'
   - '+.langlib.com'
   - '+.langlive.com'
-  - '+.langlvseo.com'
   - '+.langmanzg.com'
   - '+.langren001.com'
   - '+.langren8.com'
@@ -37690,7 +37679,6 @@ payload:
   - '+.maybe2016.com'
   - '+.maybeiwill.me'
   - '+.maycur.com'
-  - '+.maydayfans.com'
   - '+.maydeal.com'
   - '+.mayi.com'
   - '+.mayiangel.com'
@@ -38264,6 +38252,7 @@ payload:
   - '+.mia.com'
   - '+.miaibox.com'
   - '+.mian4.net'
+  - '+.mian520.com'
   - '+.mianbao.com'
   - '+.mianbaodianying.com'
   - '+.mianbaoimg.com'
@@ -41195,7 +41184,6 @@ payload:
   - '+.oliveryang.net'
   - '+.oliyi.com'
   - '+.ollomall.com'
-  - '+.olmy8.com'
   - '+.olo4.com'
   - '+.olymtech.com'
   - '+.omacloud.com'
@@ -42907,7 +42895,6 @@ payload:
   - '+.ppxwo.com'
   - '+.ppym.xyz'
   - '+.ppys.net'
-  - '+.ppys5.com'
   - '+.ppzhan.com'
   - '+.ppzhilian.com'
   - '+.ppzuche.com'
@@ -51056,7 +51043,6 @@ payload:
   - '+.thyou.com'
   - '+.thz56.com'
   - '+.thzab.com'
-  - '+.thzxhm.com'
   - '+.ti-node.com'
   - '+.ti-solar.com'
   - '+.ti98.com'
@@ -53048,6 +53034,7 @@ payload:
   - '+.union178.com'
   - '+.union400.com'
   - '+.union555.com'
+  - '+.unioncom.cc'
   - '+.unioncyber.net'
   - '+.unionli.com'
   - '+.unionpay.com'
@@ -55020,7 +55007,6 @@ payload:
   - '+.weizhangwang.com'
   - '+.weizhanle.com'
   - '+.weizhengbrand.com'
-  - '+.weizhenwx.com'
   - '+.weizhilink.com'
   - '+.weizhuanji.com'
   - '+.weizoom.com'
@@ -57205,7 +57191,6 @@ payload:
   - '+.xfguo.org'
   - '+.xfhx.com'
   - '+.xfinfr.com'
-  - '+.xfisher.com'
   - '+.xfisp.com'
   - '+.xfjw.net'
   - '+.xfkou.com'
@@ -58561,7 +58546,6 @@ payload:
   - '+.xmdpwh.com'
   - '+.xmeasygo.com'
   - '+.xmecard.com'
-  - '+.xmedchain.com'
   - '+.xmf.com'
   - '+.xmfc.com'
   - '+.xmferry.com'
@@ -58724,7 +58708,6 @@ payload:
   - '+.xpcha.com'
   - '+.xpdf.net'
   - '+.xpjedu.com'
-  - '+.xpjm.net'
   - '+.xplian.net'
   - '+.xpsheying.com'
   - '+.xpsy.net'
