--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2554,6 +2554,7 @@ payload:
   - '+.31games.com'
   - '+.31gcjx.com'
   - '+.31huiyi.com'
+  - '+.31idc.com'
   - '+.31jc.com'
   - '+.31jf.com'
   - '+.31jgj.com'
@@ -6512,6 +6513,7 @@ payload:
   - '+.91vps.com'
   - '+.91vst.com'
   - '+.91waijiao.com'
+  - '+.91waitang.com'
   - '+.91wan.com'
   - '+.91wangcai.com'
   - '+.91wangmeng.com'
@@ -7481,6 +7483,7 @@ payload:
   - '+.adwo.com'
   - '+.adx.ms'
   - '+.adx666.com'
+  - '+.adxflow.com'
   - '+.adxhi.com'
   - '+.adxiaozi.com'
   - '+.adxiny.com'
@@ -15115,6 +15118,7 @@ payload:
   - '+.clssn.com'
   - '+.clto.cc'
   - '+.cltt.org'
+  - '+.clubcarev.com'
   - '+.clubweixin.samsung.com'
   - '+.clusterdnsserver.com'
   - '+.clx360.com'
@@ -19578,7 +19582,6 @@ payload:
   - '+.dytg389.xyz'
   - '+.dytg390.xyz'
   - '+.dytg391.xyz'
-  - '+.dytol.com'
   - '+.dytt.net'
   - '+.dytt789.com'
   - '+.dytt7899.com'
@@ -20025,6 +20028,7 @@ payload:
   - '+.ed2kk.com'
   - '+.eda-china.com'
   - '+.eda1024.com'
+  - '+.eda2.com'
   - '+.eda365.com'
   - '+.eda365.net'
   - '+.edabbs.com'
@@ -20070,6 +20074,7 @@ payload:
   - '+.edongeejiao.com'
   - '+.edongli.net'
   - '+.edongyun.com'
+  - '+.edoou.com'
   - '+.edowning.net'
   - '+.edqgk.com'
   - '+.edragongame.com'
@@ -22165,6 +22170,7 @@ payload:
   - '+.fomen123.com'
   - '+.foneplatform.com'
   - '+.fongmong.com'
+  - '+.fongser.net'
   - '+.fonsoft.net'
   - '+.fonsview.com'
   - '+.font.im'
@@ -26037,6 +26043,7 @@ payload:
   - '+.heduibu.com'
   - '+.heduwang.com'
   - '+.heeeeeh.com'
+  - '+.heehee.club'
   - '+.heemoo.com'
   - '+.heerit.com'
   - '+.hefei.cc'
@@ -27466,6 +27473,7 @@ payload:
   - '+.htmlplusplus.com'
   - '+.htmlsucai.com'
   - '+.htnice.com'
+  - '+.hto9f3.xyz'
   - '+.htobl.com'
   - '+.htoo.vip'
   - '+.htpbc.com'
@@ -28940,6 +28948,7 @@ payload:
   - '+.idcbest.com'
   - '+.idcbest.hk'
   - '+.idccenter.net'
+  - '+.idcchacha.com'
   - '+.idccom.net'
   - '+.idccun.com'
   - '+.idceb.com'
@@ -37187,6 +37196,7 @@ payload:
   - '+.mabotech.com'
   - '+.mac189.com'
   - '+.mac69.com'
+  - '+.mac89.com'
   - '+.macabc.com'
   - '+.macaihong.net'
   - '+.macapp.so'
@@ -38403,6 +38413,7 @@ payload:
   - '+.mihan.cc'
   - '+.mihayo.com'
   - '+.mihayou.com'
+  - '+.mihayou.fun'
   - '+.mihoyo.com'
   - '+.mihtool.com'
   - '+.mihua.net'
@@ -41478,6 +41489,7 @@ payload:
   - '+.oschina.com'
   - '+.oschina.io'
   - '+.oschina.net'
+  - '+.oscloudcdns.com'
   - '+.osechina.com'
   - '+.osedu.net'
   - '+.oseminfo.com'
@@ -41819,6 +41831,7 @@ payload:
   - '+.pangshu.com'
   - '+.pangubox.com'
   - '+.pangukj.com'
+  - '+.pangupy.com'
   - '+.panguso.com'
   - '+.pangxieke.com'
   - '+.pangzhan.net'
@@ -43336,6 +43349,7 @@ payload:
   - '+.qdsbx.com'
   - '+.qdshitangchengbao.com'
   - '+.qdsntsg.com'
+  - '+.qdsxtkj.com'
   - '+.qdsysj.com'
   - '+.qdtech.ai'
   - '+.qdtgood.com'
@@ -45324,6 +45338,7 @@ payload:
   - '+.rmttjkw.com'
   - '+.rmtyun.com'
   - '+.rmxiongan.com'
+  - '+.rmxsw.cc'
   - '+.rmylsc.com'
   - '+.rmzs.net'
   - '+.rmzt.com'
@@ -46136,6 +46151,7 @@ payload:
   - '+.scqiuchang.com'
   - '+.scrcu.com'
   - '+.scrdzf.com'
+  - '+.scriptjc.com'
   - '+.scrmtech.com'
   - '+.scrsw.net'
   - '+.scrumcn.com'
@@ -58620,6 +58636,7 @@ payload:
   - '+.xmzsyg.com'
   - '+.xmzylh.com'
   - '+.xn--2krw29cdqai43k.com'
+  - '+.xn--2ss830adjbqy7h.xn--fiqs8s'
   - '+.xn--55qx5d'
   - '+.xn--6rt008ee0k3ua.com'
   - '+.xn--6rt008ee0k3ua.net'
@@ -65007,7 +65024,6 @@ payload:
   - '+.zzsggzy.com'
   - '+.zzsgjj.com'
   - '+.zzsjxt.com'
-  - '+.zzssjx.com'
   - '+.zzsteel.com'
   - '+.zzstep.com'
   - '+.zzt9.com'
