--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2351,7 +2351,6 @@ payload:
   - '+.289.com'
   - '+.2898.com'
   - '+.28beiduo.com'
-  - '+.28hotel.com'
   - '+.28ka.com'
   - '+.28kai.cc'
   - '+.28khy.com'
@@ -6994,7 +6993,6 @@ payload:
   - '+.9chun.com'
   - '+.9clive.com'
   - '+.9conn.net'
-  - '+.9cts.com'
   - '+.9cwx.com'
   - '+.9d19.com'
   - '+.9d4d.com'
@@ -12778,7 +12776,6 @@ payload:
   - '+.cctv1zhibo.com'
   - '+.cctv4g.com'
   - '+.cctv886.com'
-  - '+.cctvcaizhi.com'
   - '+.cctvcdn.net'
   - '+.cctvcj.com'
   - '+.cctvctpc.com'
@@ -19009,6 +19006,7 @@ payload:
   - '+.douyin.com'
   - '+.douyincdn.com'
   - '+.douyinec.com'
+  - '+.douyinliving.com'
   - '+.douyinpic.com'
   - '+.douyinstatic.com'
   - '+.douyinvideo.net'
@@ -19787,7 +19785,6 @@ payload:
   - '+.easeyedelivery.com'
   - '+.easilysend.com'
   - '+.easitcn.com'
-  - '+.easiu.com'
   - '+.eassos.com'
   - '+.east.net'
   - '+.eastall.com'
@@ -24875,6 +24872,7 @@ payload:
   - '+.gzszgas.com'
   - '+.gztaiyou.com'
   - '+.gztcdj.com'
+  - '+.gztclwx.net'
   - '+.gztfgame.com'
   - '+.gzthrc.com'
   - '+.gztopkt.com'
@@ -25406,7 +25404,6 @@ payload:
   - '+.haofajz.com'
   - '+.haofanben.com'
   - '+.haofang.net'
-  - '+.haofang365.com'
   - '+.haofang5.com'
   - '+.haofangkankan.com'
   - '+.haofenxiao.net'
@@ -29462,7 +29459,6 @@ payload:
   - '+.iloveyou14.com'
   - '+.iloveyouxi.com'
   - '+.ilovezuan.com'
-  - '+.iloxp.com'
   - '+.ilsungf.com'
   - '+.ilufan.com'
   - '+.iluoy.com'
@@ -31505,6 +31501,7 @@ payload:
   - '+.jindunfan.com'
   - '+.jinduoduo.net'
   - '+.jinenrunze.com'
+  - '+.jinet.org'
   - '+.jinfangka.com'
   - '+.jinfantongyici.com'
   - '+.jinfengkou.com'
@@ -35811,7 +35808,6 @@ payload:
   - '+.linjin.net'
   - '+.linjunet.com'
   - '+.linjunlong.com'
-  - '+.linjuyihao.com'
   - '+.link27.com'
   - '+.link2lib.com'
   - '+.link2shops.com'
@@ -38825,7 +38821,6 @@ payload:
   - '+.mmyfilm.com'
   - '+.mmzh.com'
   - '+.mn-soft.com'
-  - '+.mn21.com'
   - '+.mnancheng.com'
   - '+.mnbvtgv.com'
   - '+.mng0303.com'
@@ -39166,6 +39161,7 @@ payload:
   - '+.movesee.com'
   - '+.movesky.net'
   - '+.moviemore.com'
+  - '+.moviereviewtoday.com'
   - '+.movit-tech.com'
   - '+.mowan123.com'
   - '+.mowowo.com'
@@ -39259,6 +39255,7 @@ payload:
   - '+.ms6666111.com'
   - '+.mscbsc.com'
   - '+.mschcdn.com'
+  - '+.mscodecloud.com'
   - '+.mscto.com'
   - '+.msddp.com'
   - '+.msfpay.com'
@@ -42388,6 +42385,7 @@ payload:
   - '+.pig4cloud.com'
   - '+.pigai.org'
   - '+.pigcms.com'
+  - '+.pigji.com'
   - '+.pigjian.com'
   - '+.pigqq.com'
   - '+.pigx.vip'
@@ -49606,7 +49604,6 @@ payload:
   - '+.survivor99.com'
   - '+.susong51.com'
   - '+.susongbbs.com'
-  - '+.sustc.us'
   - '+.susudm.com'
   - '+.suteidc.com'
   - '+.sutuiapp.com'
@@ -50081,7 +50078,6 @@ payload:
   - '+.szpxe.com'
   - '+.szqcz.com'
   - '+.szqf.org'
-  - '+.szqgzx.com'
   - '+.szqsq.com'
   - '+.szqt.net'
   - '+.szquanli.com'
@@ -50806,7 +50802,6 @@ payload:
   - '+.tenddata.com'
   - '+.tendyron.com'
   - '+.tenganxinxi.com'
-  - '+.tengattack.com'
   - '+.tengbai-it.com'
   - '+.tengbo.cc'
   - '+.tengchu.com'
@@ -52803,7 +52798,6 @@ payload:
   - '+.ucren.com'
   - '+.ucss.ninja'
   - '+.uctrac.com'
-  - '+.uctxt.com'
   - '+.ucun.tech'
   - '+.ucuuc.com'
   - '+.ucw.pub'
@@ -53541,7 +53535,6 @@ payload:
   - '+.vcredit.com'
   - '+.vcsint.com'
   - '+.vdaye.com'
-  - '+.vdfly.com'
   - '+.vdian.com'
   - '+.vdisk.me'
   - '+.vdncache.com'
@@ -56975,7 +56968,6 @@ payload:
   - '+.xazzs.com'
   - '+.xb21cn.com'
   - '+.xb2s.com'
-  - '+.xb5.cc'
   - '+.xbaofun.com'
   - '+.xbaquge.com'
   - '+.xbase.cloud'
@@ -58129,7 +58121,6 @@ payload:
   - '+.xinluex.com'
   - '+.xinluobo.com'
   - '+.xinlvtu.com'
-  - '+.xinm123.com'
   - '+.xinmanduo.com'
   - '+.xinmei6.com'
   - '+.xinmeihu.com'
@@ -62675,7 +62666,6 @@ payload:
   - '+.zgcahpw.com'
   - '+.zgcbank.com'
   - '+.zgcbb.com'
-  - '+.zgcbzs.com'
   - '+.zgcdiy.com'
   - '+.zgchawang.com'
   - '+.zgchrx.com'
@@ -63989,7 +63979,6 @@ payload:
   - '+.zj31.net'
   - '+.zj32.com'
   - '+.zj339.com'
-  - '+.zj93zp.com'
   - '+.zj96596.com'
   - '+.zjabank.com'
   - '+.zjaf.net'
