--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3118,6 +3118,7 @@ payload:
   - '+.39h83s.com'
   - '+.39health.com'
   - '+.39jks.com'
+  - '+.39kan.com'
   - '+.39kf.com'
   - '+.39meitu.com'
   - '+.39shubao.com'
@@ -6884,6 +6885,7 @@ payload:
   - '+.99665.at'
   - '+.9966w.com'
   - '+.996a.com'
+  - '+.996dns.com'
   - '+.9973.com'
   - '+.997788.com'
   - '+.998.com'
@@ -7008,7 +7010,6 @@ payload:
   - '+.9earth.com'
   - '+.9ehao.com'
   - '+.9eii.com'
-  - '+.9ela.com'
   - '+.9ele.com'
   - '+.9enjoy.com'
   - '+.9fav.com'
@@ -7358,7 +7359,6 @@ payload:
   - '+.ad518.com'
   - '+.ad7.com'
   - '+.ad778.com'
-  - '+.adamlu.net'
   - '+.adanxing.com'
   - '+.adapay.tech'
   - '+.adarrive.com'
@@ -7851,6 +7851,7 @@ payload:
   - '+.aimodou.net'
   - '+.aimoge.com'
   - '+.aimsen.com'
+  - '+.ainapian.com'
   - '+.ainiapp.com'
   - '+.ainirobot.com'
   - '+.ainiseo.com'
@@ -11744,6 +11745,7 @@ payload:
   - '+.btba.cc'
   - '+.btbat.com'
   - '+.btbctex.com'
+  - '+.btbdys.com'
   - '+.btbt.tv'
   - '+.btc114.com'
   - '+.btc116.com'
@@ -11940,6 +11942,7 @@ payload:
   - '+.bwpx.com'
   - '+.bwsoft.net'
   - '+.bwton.com'
+  - '+.bwv8.com'
   - '+.bwxsj.com'
   - '+.bx1k.com'
   - '+.bx24k.com'
@@ -14989,7 +14992,6 @@ payload:
   - '+.class01.com'
   - '+.classmateer.com'
   - '+.clayidols.com'
-  - '+.claymore.wang'
   - '+.clb6.net'
   - '+.clboss.com'
   - '+.clbu.club'
@@ -15006,7 +15008,6 @@ payload:
   - '+.clearcrane.com'
   - '+.clearsky360.com'
   - '+.clewm.net'
-  - '+.clewx.com'
   - '+.clfile.com'
   - '+.cli.im'
   - '+.click-v.com'
@@ -15295,6 +15296,7 @@ payload:
   - '+.cnamegslb.com'
   - '+.cnanzhi.com'
   - '+.cnaomeng.com'
+  - '+.cnappsoft.xyz'
   - '+.cnautofinance.com'
   - '+.cnautonews.com'
   - '+.cnbabylon.com'
@@ -19181,6 +19183,7 @@ payload:
   - '+.ds023.com'
   - '+.ds123456.com'
   - '+.ds5f.com'
+  - '+.dsb.ink'
   - '+.dsblog.net'
   - '+.dscbs.com'
   - '+.dsdbearing.com'
@@ -19541,6 +19544,7 @@ payload:
   - '+.dxzx.com'
   - '+.dxzy163.com'
   - '+.dy1905.net'
+  - '+.dy2018.com'
   - '+.dy2018.net'
   - '+.dybeta.com'
   - '+.dycar.net'
@@ -22394,6 +22398,7 @@ payload:
   - '+.fsc555.com'
   - '+.fscinda.com'
   - '+.fsclzs.com'
+  - '+.fsdnp.cyou'
   - '+.fsecity.com'
   - '+.fsesa.com'
   - '+.fsfund.com'
@@ -22995,6 +23000,8 @@ payload:
   - '+.gaomon.net'
   - '+.gaopaiwood.com'
   - '+.gaopeng.com'
+  - '+.gaoqing.fm'
+  - '+.gaoqing.la'
   - '+.gaoqingpai.com'
   - '+.gaoqiwenda.com'
   - '+.gaoqixhb.com'
@@ -23519,6 +23526,7 @@ payload:
   - '+.giga-science.com'
   - '+.gigabyte.com'
   - '+.gigaget.com'
+  - '+.giho.com'
   - '+.giikin.com'
   - '+.giiso.com'
   - '+.gildata.com'
@@ -24123,7 +24131,6 @@ payload:
   - '+.gray-ice.com'
   - '+.grcbank.com'
   - '+.grchina.com'
-  - '+.gre.vip'
   - '+.greatbit.com'
   - '+.greatld.com'
   - '+.greatopensource.com'
@@ -26309,6 +26316,7 @@ payload:
   - '+.hezi.com'
   - '+.hezibook.com'
   - '+.hezibuluo.com'
+  - '+.hezijia.com'
   - '+.hezxs.com'
   - '+.hf-dhj.com'
   - '+.hf-iflysse.com'
@@ -27978,6 +27986,7 @@ payload:
   - '+.huiziyuan.net'
   - '+.huizone.com'
   - '+.huizuche.com'
+  - '+.huizucloud.com'
   - '+.huizuoyuezi.com'
   - '+.huizustore.com'
   - '+.hujia.org'
@@ -32116,6 +32125,7 @@ payload:
   - '+.jnduck.com'
   - '+.jndwyy.com'
   - '+.jnesc.com'
+  - '+.jnexpert.com'
   - '+.jnhouse.com'
   - '+.jnjbrother.com'
   - '+.jnjj.com'
@@ -33241,7 +33251,6 @@ payload:
   - '+.kangkang.work'
   - '+.kanglaohui.com'
   - '+.kangle.net'
-  - '+.kanglingjiu.com'
   - '+.kanglu.com'
   - '+.kangpeining.com'
   - '+.kangqite.com'
@@ -34066,7 +34075,6 @@ payload:
   - '+.kr126.com'
   - '+.krahag.com'
   - '+.krbamboo.com'
-  - '+.krdlw.com'
   - '+.krdrama.com'
   - '+.kriszhang.com'
   - '+.krpano.tech'
@@ -35289,7 +35297,6 @@ payload:
   - '+.leshuazf.com'
   - '+.leshuwu.com'
   - '+.leslie-cheung.com'
-  - '+.lesofaka.com'
   - '+.lesports.com'
   - '+.less-bug.com'
   - '+.lesscss.net'
@@ -41980,7 +41987,6 @@ payload:
   - '+.pbtdl.com'
   - '+.pbtxt.com'
   - '+.pc-daily.com'
-  - '+.pc-house.net'
   - '+.pc120.com'
   - '+.pc120tv.com'
   - '+.pc18.net'
@@ -42904,6 +42910,7 @@ payload:
   - '+.ppxclub.com'
   - '+.ppxs.net'
   - '+.ppxwo.com'
+  - '+.ppxzy.co'
   - '+.ppym.xyz'
   - '+.ppys.net'
   - '+.ppzhan.com'
@@ -43111,7 +43118,6 @@ payload:
   - '+.puusa.net'
   - '+.puwenlong.com'
   - '+.puworld.com'
-  - '+.puyuecs.com'
   - '+.puyurumen.com'
   - '+.puzeyf.com'
   - '+.pv001.net'
@@ -44545,6 +44551,7 @@ payload:
   - '+.qumitech.com'
   - '+.qun.hk'
   - '+.qun100.com'
+  - '+.qun7.com'
   - '+.quna.com'
   - '+.qunaer.com'
   - '+.qunale888.com'
@@ -45618,7 +45625,6 @@ payload:
   - '+.ruidongcloud.com'
   - '+.ruidroid.xyz'
   - '+.ruifang-tech.com'
-  - '+.ruiguandental.com'
   - '+.ruihaimeifeng.com'
   - '+.ruihuo.com'
   - '+.ruiii.com'
@@ -50106,7 +50112,6 @@ payload:
   - '+.sztara.com'
   - '+.sztkc.com'
   - '+.sztmt.com'
-  - '+.sztongdazulin.com'
   - '+.sztopbrand.com'
   - '+.sztspi.com'
   - '+.sztxcpa.com'
@@ -51953,7 +51958,6 @@ payload:
   - '+.treeoncloud.com'
   - '+.treetwins.com'
   - '+.treeyee.com'
-  - '+.trejhtyrjetyjetyrkuy-3.xyz'
   - '+.trekin.space'
   - '+.trekiz.com'
   - '+.trend6.com'
@@ -52651,6 +52655,7 @@ payload:
   - '+.tzdjzu.com'
   - '+.tzfdc.com'
   - '+.tzfeize.xyz'
+  - '+.tzfile.com'
   - '+.tzfuke.com'
   - '+.tzgcjie.com'
   - '+.tzhubo.com'
@@ -54032,7 +54037,6 @@ payload:
   - '+.vurl.link'
   - '+.vutimes.com'
   - '+.vux.li'
-  - '+.vv181.com'
   - '+.vv8.com'
   - '+.vv881.com'
   - '+.vv8yx.com'
@@ -54044,6 +54048,7 @@ payload:
   - '+.vvdoit.com'
   - '+.vvebo.vip'
   - '+.vvfeng.com'
+  - '+.vvfht.fun'
   - '+.vvgroup.com'
   - '+.vvhan.com'
   - '+.vvic.com'
@@ -54290,7 +54295,6 @@ payload:
   - '+.wangdaijianwen.com'
   - '+.wangdaijin.com'
   - '+.wangdaileida.com'
-  - '+.wangdaizhijia.com'
   - '+.wangdalao.com'
   - '+.wangdali.net'
   - '+.wangdaodao.com'
@@ -58142,7 +58146,6 @@ payload:
   - '+.xinqigu.com'
   - '+.xinqing.com'
   - '+.xinqiyejia.com'
-  - '+.xinqiys.com'
   - '+.xinqtech.com'
   - '+.xinquanedu.com'
   - '+.xinquji.com'
@@ -61729,6 +61732,7 @@ payload:
   - '+.yuncai5.com'
   - '+.yuncaijing.com'
   - '+.yuncdn.bid'
+  - '+.yuncdn123.com'
   - '+.yuncdn263.com'
   - '+.yuncdndun.com'
   - '+.yunceng.com'
@@ -62015,6 +62019,7 @@ payload:
   - '+.yuyin.tv'
   - '+.yuyu.com'
   - '+.yuyue111.com'
+  - '+.yuyue27.com'
   - '+.yuyueshop.com'
   - '+.yuyuhunter.com'
   - '+.yuyuntech.com'
@@ -63320,6 +63325,7 @@ payload:
   - '+.zhishuedu.com'
   - '+.zhishutang.com'
   - '+.zhisiyun.com'
+  - '+.zhisongip.com'
   - '+.zhitongcaijing.com'
   - '+.zhitoudsp.com'
   - '+.zhitouxing.com'
@@ -64272,6 +64278,7 @@ payload:
   - '+.zmsc.cc'
   - '+.zmsq.com'
   - '+.zmt.me'
+  - '+.zmtc.com'
   - '+.zmtiantang.com'
   - '+.zmtpc.com'
   - '+.zmtquan.com'
