--- a/directbak.yaml
+++ b/directbak.yaml
@@ -396,7 +396,6 @@ payload:
   - '+.0575dsw.com'
   - '+.0575life.com'
   - '+.0575xf.com'
-  - '+.0576886.com'
   - '+.0576dsw.com'
   - '+.0577-it.com'
   - '+.0577cnw.com'
@@ -2184,6 +2183,7 @@ payload:
   - '+.238.com'
   - '+.2380.in'
   - '+.23900341.com'
+  - '+.239334.cc'
   - '+.23bei.com'
   - '+.23book.com'
   - '+.23class.com'
@@ -2363,7 +2363,6 @@ payload:
   - '+.29293.com'
   - '+.2929gou.com'
   - '+.293.net'
-  - '+.29365.bet'
   - '+.2952.cc'
   - '+.29592.net'
   - '+.29663.com'
@@ -4324,7 +4323,6 @@ payload:
   - '+.52debug.net'
   - '+.52design.com'
   - '+.52dfg.com'
-  - '+.52dgs.net'
   - '+.52digua.com'
   - '+.52dmtp.com'
   - '+.52doc.com'
@@ -4424,7 +4422,6 @@ payload:
   - '+.52samsung.com'
   - '+.52shangou.com'
   - '+.52shici.com'
-  - '+.52shihu.com'
   - '+.52shijing.com'
   - '+.52shipping.com'
   - '+.52shufa.net'
@@ -6967,7 +6964,6 @@ payload:
   - '+.99sun.com'
   - '+.99sushe.com'
   - '+.99vf.com'
-  - '+.99vu.com'
   - '+.99weidu99.ltd'
   - '+.99weiqi.com'
   - '+.99wuxian.com'
@@ -9970,6 +9966,7 @@ payload:
   - '+.baozhuang5.com'
   - '+.baozhuangren.com'
   - '+.baozifa.com'
+  - '+.baozijishu.com'
   - '+.baozipu.com'
   - '+.baozou.com'
   - '+.baozoudi.com'
@@ -11648,7 +11645,6 @@ payload:
   - '+.bpxxfw.com'
   - '+.bq04.com'
   - '+.bq233.com'
-  - '+.bq8xs.com'
   - '+.bqatj.com'
   - '+.bqfy.com'
   - '+.bqg8.cc'
@@ -11903,7 +11899,6 @@ payload:
   - '+.buyhot.vip'
   - '+.buyigang.com'
   - '+.buyiju.com'
-  - '+.buyinball.com'
   - '+.buyjk.com'
   - '+.buykee.com'
   - '+.buylabel.com'
@@ -11930,7 +11925,6 @@ payload:
   - '+.bwda.net'
   - '+.bwfapiao.com'
   - '+.bwfhmall.com'
-  - '+.bwgongye.com'
   - '+.bwgrt.com'
   - '+.bwhero.com'
   - '+.bwhgsb.com'
@@ -12538,7 +12532,6 @@ payload:
   - '+.cbfau.com'
   - '+.cbgcloud.com'
   - '+.cbi360.net'
-  - '+.cbi88.com'
   - '+.cbice.com'
   - '+.cbiec.com'
   - '+.cbiec.net'
@@ -13410,6 +13403,7 @@ payload:
   - '+.chanluntan.com'
   - '+.chanmama.com'
   - '+.channelbeyond.com'
+  - '+.channeslcode.com'
   - '+.channingsun.bid'
   - '+.chanpay.com'
   - '+.chanpin100.com'
@@ -13465,6 +13459,7 @@ payload:
   - '+.chaoxing.com'
   - '+.chaoyi996.com'
   - '+.chaoyindj.com'
+  - '+.chaoyinfastcdnbestcdn.vip'
   - '+.chaoyisy.com'
   - '+.chaoyuelm.com'
   - '+.chaoyuesd.com'
@@ -13593,7 +13588,6 @@ payload:
   - '+.chengchuanren.com'
   - '+.chengdebank.com'
   - '+.chengdechina.com'
-  - '+.chengder.com'
   - '+.chengdu-expat.com'
   - '+.chengdun.com'
   - '+.chengedeco.com'
@@ -13794,7 +13788,6 @@ payload:
   - '+.china-enterprise.com'
   - '+.china-epa.com'
   - '+.china-erzhong.com'
-  - '+.china-experts.com'
   - '+.china-fire.com'
   - '+.china-fishery.com'
   - '+.china-flash.com'
@@ -14128,7 +14121,6 @@ payload:
   - '+.chinajeweler.com'
   - '+.chinajjz.com'
   - '+.chinajnhb.com'
-  - '+.chinajoinin.com'
   - '+.chinajoy.net'
   - '+.chinajs120.com'
   - '+.chinajsxx.com'
@@ -16184,7 +16176,6 @@ payload:
   - '+.cpcccac.com'
   - '+.cpcni.net'
   - '+.cpcw.com'
-  - '+.cpcwe.com'
   - '+.cpdad.com'
   - '+.cpdaily.com'
   - '+.cpdyj.com'
@@ -17512,7 +17503,6 @@ payload:
   - '+.datianmen.com'
   - '+.datk.anythinktech.com'
   - '+.datongtaxi.com'
-  - '+.datouwang.com'
   - '+.datuc.com'
   - '+.datuly.com'
   - '+.dav01.com'
@@ -18055,6 +18045,7 @@ payload:
   - '+.dgwoto.com'
   - '+.dgwtrl.com'
   - '+.dgxbjg.com'
+  - '+.dgxinde.net'
   - '+.dgxue.com'
   - '+.dgyejia.com'
   - '+.dgygpx.com'
@@ -18575,7 +18566,6 @@ payload:
   - '+.dlxk.com'
   - '+.dlxww.com'
   - '+.dlyestar.com'
-  - '+.dlyilian.com'
   - '+.dlzb.com'
   - '+.dlztb.com'
   - '+.dlzyc.com'
@@ -19655,7 +19645,6 @@ payload:
   - '+.dztcbj.com'
   - '+.dztcfj.com'
   - '+.dztchun.com'
-  - '+.dztcjt.com'
   - '+.dztcnm.com'
   - '+.dztv.tv'
   - '+.dzty365.com'
@@ -21393,6 +21382,7 @@ payload:
   - '+.fastadmin.net'
   - '+.fastadx.com'
   - '+.fastapi.net'
+  - '+.fastbestbetergoodcdn.com'
   - '+.fastcdn.com'
   - '+.fastdo.cc'
   - '+.fastgit.org'
@@ -23420,6 +23410,7 @@ payload:
   - '+.gfd178.com'
   - '+.gfdns.net'
   - '+.gfdsa.net'
+  - '+.gfdun.icu'
   - '+.gfedu.com'
   - '+.gffirm.com'
   - '+.gffwq.com'
@@ -24890,7 +24881,6 @@ payload:
   - '+.gztz120.com'
   - '+.gzuc.net'
   - '+.gzuni.com'
-  - '+.gzvanc.com'
   - '+.gzw.net'
   - '+.gzwanbao.com'
   - '+.gzwangshang.com'
@@ -25799,6 +25789,7 @@ payload:
   - '+.hbrebond.com'
   - '+.hbrfxh.com'
   - '+.hbruicai.com'
+  - '+.hbrunlin.com'
   - '+.hbryzx.net'
   - '+.hbrzkj.com'
   - '+.hbs-nd.com'
@@ -26083,7 +26074,6 @@ payload:
   - '+.heima8.com'
   - '+.heimabao.com'
   - '+.heimac.net'
-  - '+.heimacode.com'
   - '+.heimadao.com'
   - '+.heimadata.com'
   - '+.heimai666.com'
@@ -26446,6 +26436,7 @@ payload:
   - '+.hi1718.com'
   - '+.hi2000.com'
   - '+.hi2000.net'
+  - '+.hiaal.com'
   - '+.hiagr.com'
   - '+.hiapk.com'
   - '+.hiavr.com'
@@ -27055,6 +27046,7 @@ payload:
   - '+.honghuotai.com'
   - '+.hongjiang.info'
   - '+.hongjiejia.com'
+  - '+.hongjin2.com'
   - '+.hongjing.com'
   - '+.hongjingedu.com'
   - '+.hongjiu66.com'
@@ -28461,6 +28453,7 @@ payload:
   - '+.hzjunglepay.com'
   - '+.hzjunxing.com'
   - '+.hzkayo.com'
+  - '+.hzkshx.com'
   - '+.hzleshun.com'
   - '+.hzljlyy.com'
   - '+.hzlug.org'
@@ -30971,6 +30964,7 @@ payload:
   - '+.jeyi.com'
   - '+.jf2688.com'
   - '+.jf9p.com'
+  - '+.jfapv.net'
   - '+.jfbcb.com'
   - '+.jfbuilding.com'
   - '+.jfcaifu.com'
@@ -31038,6 +31032,7 @@ payload:
   - '+.jhonse.com'
   - '+.jhqshfly.com'
   - '+.jhrcbank.com'
+  - '+.jhrdqx.com'
   - '+.jhsbggw.com'
   - '+.jhscm.com'
   - '+.jhscrm.com'
@@ -31642,7 +31637,6 @@ payload:
   - '+.jinlaiba.com'
   - '+.jinlanqihua.com'
   - '+.jinlianchu.com'
-  - '+.jinlijzbd.com'
   - '+.jinlinghotel.com'
   - '+.jinlinghotels.com'
   - '+.jinliniuan.com'
@@ -32518,7 +32512,6 @@ payload:
   - '+.jssfx.com'
   - '+.jssgw.com'
   - '+.jsshow.net'
-  - '+.jssjys.com'
   - '+.jssnrcb.com'
   - '+.jsswordshop.com'
   - '+.jssytc.com'
@@ -32855,6 +32848,7 @@ payload:
   - '+.jwl100.com'
   - '+.jwnote.com'
   - '+.jwsaas.com'
+  - '+.jwsem.com'
   - '+.jwshy.com'
   - '+.jwview.com'
   - '+.jwwey.com'
@@ -33468,6 +33462,7 @@ payload:
   - '+.keerworld.com'
   - '+.keewin.com'
   - '+.kefeng.wang'
+  - '+.kefenxi.com'
   - '+.kefusoft.com'
   - '+.kefutoutiao.com'
   - '+.kefuzu.com'
@@ -33542,7 +33537,6 @@ payload:
   - '+.kenkapacking.com'
   - '+.kenshin.wang'
   - '+.kenshu.cc'
-  - '+.kentepa.com'
   - '+.kentier.com'
   - '+.kenuonet.com'
   - '+.kenweini.com'
@@ -36430,6 +36424,7 @@ payload:
   - '+.longjcun.com'
   - '+.longjiazuo.com'
   - '+.longk.com'
+  - '+.longlinjiaoyu.com'
   - '+.longmaosoft.com'
   - '+.longmaoyouxifuwu.com'
   - '+.longmarchspace.com'
@@ -37948,7 +37943,6 @@ payload:
   - '+.meijuzj.com'
   - '+.meikankeji.com'
   - '+.meike-shoes.com'
-  - '+.meike15.com'
   - '+.meikeda.net'
   - '+.meikr.com'
   - '+.meiktv.com'
@@ -40803,6 +40797,7 @@ payload:
   - '+.ntfsformac.cc'
   - '+.nthfw.com'
   - '+.nthysp.com'
+  - '+.ntjob88.com'
   - '+.ntjoy.com'
   - '+.ntjrchina.com'
   - '+.ntjymall.com'
@@ -42491,6 +42486,7 @@ payload:
   - '+.pinpaidadao.com'
   - '+.pinpailiu.com'
   - '+.pinpailun.com'
+  - '+.pinpaime.com'
   - '+.pinpaing.com'
   - '+.pinpaiv.com'
   - '+.pinqugongxiangktv.com'
@@ -43674,6 +43670,7 @@ payload:
   - '+.qieyuedu.com'
   - '+.qiezip.com'
   - '+.qifake.com'
+  - '+.qifandianlansh.com'
   - '+.qifangw.com'
   - '+.qifeiye.com'
   - '+.qifub.com'
@@ -44310,7 +44307,6 @@ payload:
   - '+.qqymail.com'
   - '+.qqyou.com'
   - '+.qqyouju.com'
-  - '+.qqywf.com'
   - '+.qqyy.com'
   - '+.qqzby.net'
   - '+.qqzhi.com'
@@ -44438,7 +44434,6 @@ payload:
   - '+.quanshuwan.com'
   - '+.quansucloud.com'
   - '+.quantacn.com'
-  - '+.quantao100.com'
   - '+.quantaoyougou.com'
   - '+.quantiku.org'
   - '+.quantil.com'
@@ -45901,6 +45896,7 @@ payload:
   - '+.sangfor.com'
   - '+.sangfor.net'
   - '+.sangfor.org'
+  - '+.sangforcloud.com'
   - '+.sangfordns.com'
   - '+.sangongzai.net'
   - '+.sangsir.com'
@@ -46686,6 +46682,7 @@ payload:
   - '+.sh-tangfeng.com'
   - '+.sh-warwick.com'
   - '+.sh-xinao.com'
+  - '+.sh-xixuan.com'
   - '+.sh-yajia.com'
   - '+.sh-ybxhz.com'
   - '+.sh-yuy.com'
@@ -46869,7 +46866,6 @@ payload:
   - '+.shanxiol.com'
   - '+.shanxiumao.com'
   - '+.shanxiuxia.com'
-  - '+.shanxuenet.com'
   - '+.shanyemangfu.com'
   - '+.shanyetang.com'
   - '+.shanyeyuanliang.com'
@@ -47785,6 +47781,7 @@ payload:
   - '+.shykz123456.com'
   - '+.shymte.com'
   - '+.shyonghui.xyz'
+  - '+.shyongzeng.com'
   - '+.shyouai.com'
   - '+.shyouth.net'
   - '+.shyrcb.com'
@@ -48150,6 +48147,7 @@ payload:
   - '+.sjhl.cc'
   - '+.sjhy.net'
   - '+.sjifm.com'
+  - '+.sjjob88.com'
   - '+.sjkhsl.fun'
   - '+.sjlqgg.com'
   - '+.sjm.life'
@@ -49614,6 +49612,7 @@ payload:
   - '+.suteidc.com'
   - '+.sutuiapp.com'
   - '+.sutune.me'
+  - '+.suuuwsj9.xyz'
   - '+.suv666.com'
   - '+.suxiazai.com'
   - '+.suxieban.com'
@@ -50203,7 +50202,6 @@ payload:
   - '+.t5.work'
   - '+.t56.net'
   - '+.t56jy.net'
-  - '+.t58b.com'
   - '+.t5a9.com'
   - '+.t5xs.com'
   - '+.t6756.com'
@@ -50421,6 +50419,7 @@ payload:
   - '+.taobao-img.com'
   - '+.taobao.com'
   - '+.taobao.cz'
+  - '+.taobao.global'
   - '+.taobao.net'
   - '+.taobao.org'
   - '+.taobao.tw'
@@ -50557,6 +50556,7 @@ payload:
   - '+.tatatimes.com'
   - '+.tatazu.com'
   - '+.taterli.com'
+  - '+.tatstm.com'
   - '+.tattoo114.com'
   - '+.tattoo77.com'
   - '+.taurus66.com'
@@ -50929,6 +50929,7 @@ payload:
   - '+.tg1234.com'
   - '+.tg138.com'
   - '+.tg72.com'
+  - '+.tgah.skin'
   - '+.tgbus.com'
   - '+.tgcid.org'
   - '+.tghello.com'
@@ -52730,7 +52731,6 @@ payload:
   - '+.ub666.cc'
   - '+.uban.com'
   - '+.ubangmang.com'
-  - '+.ubernihao.com'
   - '+.ubersz.com'
   - '+.ubestkid.com'
   - '+.ubetween.com'
@@ -53685,7 +53685,6 @@ payload:
   - '+.vikecn.com'
   - '+.vilipix.com'
   - '+.villaday.com'
-  - '+.villafrancescatti.com'
   - '+.viltd.com'
   - '+.vimage1.com'
   - '+.vimage2.com'
@@ -55965,6 +55964,7 @@ payload:
   - '+.wnssedu.com'
   - '+.wntool.com'
   - '+.wnwb.com'
+  - '+.wnxfs.com'
   - '+.wnzc.com'
   - '+.wnzhbb.com'
   - '+.wnzhuishu.com'
@@ -56169,7 +56169,6 @@ payload:
   - '+.wosign.com'
   - '+.wosigndoc.com'
   - '+.woskj2.com'
-  - '+.wosn.net'
   - '+.woso100.com'
   - '+.wosouyun.com'
   - '+.wotobang.com'
@@ -56732,7 +56731,6 @@ payload:
   - '+.wxp114.com'
   - '+.wxphp.com'
   - '+.wxrb.com'
-  - '+.wxreallink.com'
   - '+.wxrrd.com'
   - '+.wxscreen.com'
   - '+.wxsell.com'
@@ -57301,7 +57299,6 @@ payload:
   - '+.xhy.com'
   - '+.xhyd.com'
   - '+.xhytd.com'
-  - '+.xhzmjs.com'
   - '+.xi-soft.com'
   - '+.xi1361.com'
   - '+.xi5jie.com'
@@ -58870,7 +58867,6 @@ payload:
   - '+.xtyxdq.com'
   - '+.xtzjcz.com'
   - '+.xu1s.com'
-  - '+.xu7b.com'
   - '+.xuanad.com'
   - '+.xuanba.com'
   - '+.xuanbiaoqing.com'
@@ -59230,7 +59226,6 @@ payload:
   - '+.xxwolo.com'
   - '+.xxxbiquge.com'
   - '+.xxxfeng.com'
-  - '+.xxxlbox.com'
   - '+.xxxmeng.com'
   - '+.xxxxxbbs.com'
   - '+.xxxzzlm.org'
@@ -60164,6 +60159,7 @@ payload:
   - '+.yihegold.com'
   - '+.yihong001.com'
   - '+.yihongzhihui.com'
+  - '+.yihshou.com'
   - '+.yihu.com'
   - '+.yihuacomputer.com'
   - '+.yihuikeji.vip'
@@ -60755,7 +60751,6 @@ payload:
   - '+.ymraaa.com'
   - '+.ymrcw.vip'
   - '+.ymsteam.com'
-  - '+.ymstj.xyz'
   - '+.ymsxq002.pw'
   - '+.ymsxq003.pw'
   - '+.ymsxq004.pw'
@@ -62427,6 +62422,7 @@ payload:
   - '+.zazsz.com'
   - '+.zb-kc.com'
   - '+.zb1.org'
+  - '+.zb128x9.cc'
   - '+.zb580.tv'
   - '+.zb7.com'
   - '+.zb8.com'
@@ -62539,7 +62535,6 @@ payload:
   - '+.zddream.com'
   - '+.zdexe.com'
   - '+.zdface.com'
-  - '+.zdfans.com'
   - '+.zdfans7.com'
   - '+.zdfx.net'
   - '+.zdh168.com'
@@ -63055,7 +63050,6 @@ payload:
   - '+.zhe800.com'
   - '+.zhebei.com'
   - '+.zhebiekeji.com'
-  - '+.zhedakaoyan.com'
   - '+.zhefengle.com'
   - '+.zhejiangmuseum.com'
   - '+.zhejiangqinghe.com'
@@ -63641,7 +63635,6 @@ payload:
   - '+.zhubao.com'
   - '+.zhubao668.com'
   - '+.zhubaojizhen.com'
-  - '+.zhubaoq.com'
   - '+.zhubian.com'
   - '+.zhubiaoju.com'
   - '+.zhubijiao.com'
@@ -63850,7 +63843,6 @@ payload:
   - '+.ziipoo.com'
   - '+.ziisp.com'
   - '+.zijgdw.com'
-  - '+.ziji.cc'
   - '+.zijiayouly.com'
   - '+.zijieapi.com'
   - '+.zijiecdn.com'
