--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3464,7 +3464,6 @@ payload:
   - '+.4699a.com'
   - '+.46design.com'
   - '+.46mlsv.com'
-  - '+.46z5j5.xyz'
   - '+.47365.com'
   - '+.4738.com'
   - '+.4743.uk'
@@ -7016,7 +7015,6 @@ payload:
   - '+.9g.com'
   - '+.9g8g.com'
   - '+.9gty.net'
-  - '+.9hcom.com'
   - '+.9he.com'
   - '+.9host.org'
   - '+.9hou.com'
@@ -9418,6 +9416,7 @@ payload:
   - '+.azoyacdn.com'
   - '+.azoyagroup.com'
   - '+.aztsg.com'
+  - '+.azuretouch.net'
   - '+.azurew.com'
   - '+.azureyun.com'
   - '+.azycjd.com'
@@ -10033,6 +10032,7 @@ payload:
   - '+.bazhuayu.cc'
   - '+.bazhuayu.com'
   - '+.bazi.cloud'
+  - '+.bazi.xin'
   - '+.bazi5.com'
   - '+.bazp.net'
   - '+.bb-edu.com'
@@ -10126,7 +10126,6 @@ payload:
   - '+.bcelive.com'
   - '+.bcevod.com'
   - '+.bcitb.com'
-  - '+.bcjy123.com'
   - '+.bclsw.com'
   - '+.bcmcdn.com'
   - '+.bcmeng.com'
@@ -11086,7 +11085,6 @@ payload:
   - '+.bjkhzx.com'
   - '+.bjkqj.com'
   - '+.bjkrtwl.com'
-  - '+.bjksd120.com'
   - '+.bjl777.com'
   - '+.bjlanqiao.com'
   - '+.bjlcs-tech.com'
@@ -12869,6 +12867,7 @@ payload:
   - '+.cdjnrc.com'
   - '+.cdjsjx.com'
   - '+.cdjxjy.com'
+  - '+.cdjzso.com'
   - '+.cdjzw.com'
   - '+.cdjzwykj.com'
   - '+.cdjzx120.com'
@@ -13880,6 +13879,7 @@ payload:
   - '+.china724.com'
   - '+.china777.org'
   - '+.china95.net'
+  - '+.china95.xyz'
   - '+.china9s.com'
   - '+.china9y.com'
   - '+.chinaacc.com'
@@ -19550,7 +19550,6 @@ payload:
   - '+.dyfc.net'
   - '+.dyg-hec.com'
   - '+.dygang.com'
-  - '+.dygang.net'
   - '+.dygangs.com'
   - '+.dygf.com'
   - '+.dygod.org'
@@ -22321,6 +22320,7 @@ payload:
   - '+.free789.com'
   - '+.freebsdchina.org'
   - '+.freebuf.com'
+  - '+.freecat.work'
   - '+.freecplus.net'
   - '+.freedgo.com'
   - '+.freefrp.net'
@@ -26943,7 +26943,6 @@ payload:
   - '+.hnzhouyi.com'
   - '+.hnzhy.com'
   - '+.hnzjdc.com'
-  - '+.hnzjfcw.com'
   - '+.hnzjgfw.com'
   - '+.hnzjip.com'
   - '+.hnzjzx.org'
@@ -32923,7 +32922,6 @@ payload:
   - '+.jxsrfdc.com'
   - '+.jxsxdp.com'
   - '+.jxtech.net'
-  - '+.jxtobo.com'
   - '+.jxtvbbs.com'
   - '+.jxtvshop.com'
   - '+.jxtyzx.org'
@@ -33597,7 +33595,6 @@ payload:
   - '+.keyuhome.com'
   - '+.keyunidc.com'
   - '+.keyunsoft.com'
-  - '+.keyyou.net'
   - '+.kezhaozhao.com'
   - '+.kezool.com'
   - '+.kf.ai'
@@ -35229,7 +35226,6 @@ payload:
   - '+.lempstack.com'
   - '+.lengcat.com'
   - '+.lenget.com'
-  - '+.lenggirl.com'
   - '+.lengqing.org'
   - '+.lengxiaohua.com'
   - '+.lengziyuan.com'
@@ -35863,7 +35859,6 @@ payload:
   - '+.linovel.net'
   - '+.linovelib.com'
   - '+.linpx.com'
-  - '+.linqu.tv'
   - '+.linquan.info'
   - '+.linquan.name'
   - '+.linqujob.com'
@@ -37481,7 +37476,6 @@ payload:
   - '+.manhua365.com'
   - '+.manhua456.com'
   - '+.manhuacheng.com'
-  - '+.manhuadao.com'
   - '+.manhuadaohang.com'
   - '+.manhuadb.com'
   - '+.manhuafen.com'
@@ -38893,6 +38887,7 @@ payload:
   - '+.mobvoi.com'
   - '+.mocache.com'
   - '+.mocartoon.com'
+  - '+.mochouu.com'
   - '+.mockingbot.com'
   - '+.mockplus.com'
   - '+.mockuai.com'
@@ -46263,6 +46258,7 @@ payload:
   - '+.sdicpower.com'
   - '+.sdicvc.com'
   - '+.sdifenzhou.com'
+  - '+.sdiitu.com'
   - '+.sdiread.com'
   - '+.sditol.com'
   - '+.sdj-tech.com'
@@ -51020,7 +51016,6 @@ payload:
   - '+.thinksrc.com'
   - '+.thinvent.com'
   - '+.thishealthsummit.com'
-  - '+.thisim.net'
   - '+.thisisdongdongqiang.com'
   - '+.thiztech.com'
   - '+.thjunshi.com'
@@ -52174,7 +52169,6 @@ payload:
   - '+.ttymq.com'
   - '+.ttyongche.com'
   - '+.ttyqm.com'
-  - '+.ttys5.com'
   - '+.ttysq.com'
   - '+.ttyyuuoo.com'
   - '+.ttz.com'
@@ -55759,7 +55753,6 @@ payload:
   - '+.wisdri.com'
   - '+.wise-iot.com'
   - '+.wiseah.com'
-  - '+.wiseboke.com'
   - '+.wisecotech.com'
   - '+.wisedoo.com'
   - '+.wisedsp.net'
@@ -56056,6 +56049,7 @@ payload:
   - '+.wolongyoule.com'
   - '+.wolongzywcdn.com'
   - '+.wolongzywcdn2.com'
+  - '+.wolongzywcdn3.com'
   - '+.wolwo.ltd'
   - '+.wolwobiotech.com'
   - '+.womai.com'
@@ -59575,7 +59569,6 @@ payload:
   - '+.yantubao.com'
   - '+.yantuchina.com'
   - '+.yanue.net'
-  - '+.yanunon.com'
   - '+.yanwenzi.com'
   - '+.yanxian.org'
   - '+.yanxintong.com'
@@ -61042,6 +61035,7 @@ payload:
   - '+.youkua.net'
   - '+.youkudou.com'
   - '+.youkudown.com'
+  - '+.youkuphoto.com'
   - '+.youlanw.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
@@ -63485,7 +63479,6 @@ payload:
   - '+.zhonglun.com'
   - '+.zhongman.com'
   - '+.zhongmian.com'
-  - '+.zhongmingmao.me'
   - '+.zhongniu.com'
   - '+.zhongpaiwang.com'
   - '+.zhongqixin360.com'
@@ -64153,7 +64146,6 @@ payload:
   - '+.zkcx.com'
   - '+.zkdt.net'
   - '+.zkecopro.com'
-  - '+.zkeli.com'
   - '+.zkeys.com'
   - '+.zkh.com'
   - '+.zkh360.com'
