--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4354,7 +4354,6 @@ payload:
   - '+.52hrttpic.com'
   - '+.52hxw.com'
   - '+.52ig.net'
-  - '+.52ij.com'
   - '+.52im.net'
   - '+.52investing.com'
   - '+.52inwet.com'
@@ -4566,7 +4565,6 @@ payload:
   - '+.55188.com'
   - '+.551house.com'
   - '+.5523.com'
-  - '+.55332147.com'
   - '+.55344.com'
   - '+.5548.net'
   - '+.555000d3.com'
@@ -4820,7 +4818,6 @@ payload:
   - '+.597rcw.com'
   - '+.59881.com'
   - '+.598991.com'
-  - '+.598g.com'
   - '+.599.com'
   - '+.5999.tv'
   - '+.599ku.com'
@@ -4880,6 +4877,7 @@ payload:
   - '+.5fwan.com'
   - '+.5gcg.com'
   - '+.5ggm.com'
+  - '+.5glianc.com'
   - '+.5goto.com'
   - '+.5gseo.net'
   - '+.5gwan.com'
@@ -7163,7 +7161,6 @@ payload:
   - '+.ab173.com'
   - '+.ab365.com'
   - '+.ab8499.cc'
-  - '+.ab95569.com'
   - '+.abab.com'
   - '+.abacaipu.com'
   - '+.abackup.com'
@@ -7229,7 +7226,6 @@ payload:
   - '+.abovede6.com'
   - '+.abreader.com'
   - '+.abslw.com'
-  - '+.abtionb.com'
   - '+.abuquant.com'
   - '+.abusi.net'
   - '+.abuyun.com'
@@ -7431,7 +7427,6 @@ payload:
   - '+.adobeedu.com'
   - '+.adoregeek.com'
   - '+.adpchina.com'
-  - '+.adpgsc.com'
   - '+.adplusx.com'
   - '+.adpolestar.net'
   - '+.adportion.com'
@@ -7721,7 +7716,6 @@ payload:
   - '+.aidaxing.com'
   - '+.aidaxue.com'
   - '+.aideep.com'
-  - '+.aidg.cc'
   - '+.aidianji.net'
   - '+.aidiao.com'
   - '+.aidigger.com'
@@ -9503,7 +9497,6 @@ payload:
   - '+.badudns.cc'
   - '+.baertt.com'
   - '+.bafangjuhe.com'
-  - '+.bafangka.com'
   - '+.bafangwang.com'
   - '+.bag198.com'
   - '+.bagb2b.com'
@@ -9721,6 +9714,7 @@ payload:
   - '+.baiyuemi.com'
   - '+.baiyunairport.com'
   - '+.baiyundou.net'
+  - '+.baiyunhuojia.com'
   - '+.baiyuno.com'
   - '+.baiyunxitong.com'
   - '+.baiyuxiong.com'
@@ -9938,6 +9932,7 @@ payload:
   - '+.baowu.com'
   - '+.baowugroup.com'
   - '+.baoxian.com'
+  - '+.baoxian72.com'
   - '+.baoxianhai.com'
   - '+.baoxianshichang.com'
   - '+.baoxiaobar.com'
@@ -12020,6 +12015,7 @@ payload:
   - '+.byte.online'
   - '+.byte008.com'
   - '+.byteacctimg.com'
+  - '+.byteactivity.com'
   - '+.byteadverts.com'
   - '+.bytebye.com'
   - '+.bytecdn.com'
@@ -15613,7 +15609,6 @@ payload:
   - '+.cnntt.com'
   - '+.cnnuo.com'
   - '+.cnobol.com'
-  - '+.cnoee.com'
   - '+.cnohd.com'
   - '+.cnoic.com'
   - '+.cnoil.com'
@@ -19217,7 +19212,6 @@ payload:
   - '+.dtdream.com'
   - '+.dtdxcw.com'
   - '+.dtfcw.com'
-  - '+.dthrb.com'
   - '+.dtidc.com'
   - '+.dtime.com'
   - '+.dtmao.cc'
@@ -20717,6 +20711,7 @@ payload:
   - '+.essclick.com'
   - '+.essdc.com'
   - '+.essemi.com'
+  - '+.essencefund.com'
   - '+.ession.com'
   - '+.essjj.com'
   - '+.essyy.com'
@@ -22005,6 +22000,7 @@ payload:
   - '+.fkdxg.com'
   - '+.fkesfg.com'
   - '+.fkjie.com'
+  - '+.fklngy.com'
   - '+.fkw.com'
   - '+.fkw100.com'
   - '+.fkxs.net'
@@ -22609,7 +22605,6 @@ payload:
   - '+.fwdq.net'
   - '+.fwdqw.com'
   - '+.fwhzxxgbyy.com'
-  - '+.fwjia.com'
   - '+.fwqbdn.com'
   - '+.fwqtg.net'
   - '+.fwqzx.com'
@@ -24222,7 +24217,6 @@ payload:
   - '+.gsxcdn.com'
   - '+.gsxservice.com'
   - '+.gsxtj.com'
-  - '+.gsxzq.com'
   - '+.gszlyy.com'
   - '+.gszph.com'
   - '+.gt-key.com'
@@ -25416,6 +25410,7 @@ payload:
   - '+.haohan-data.com'
   - '+.haohanfw.com'
   - '+.haohanguo.com'
+  - '+.haohanpower.tech'
   - '+.haohanseo.com'
   - '+.haohaotuan.com'
   - '+.haohaowan.com'
@@ -27038,7 +27033,6 @@ payload:
   - '+.hongfengye.com'
   - '+.honggebang.com'
   - '+.honghailt.com'
-  - '+.honghanda.com'
   - '+.honghe-tech.com'
   - '+.hongheiku.com'
   - '+.honghonghu.com'
@@ -28192,7 +28186,6 @@ payload:
   - '+.huyaruanwen.com'
   - '+.huyn.com'
   - '+.huynet.com'
-  - '+.huyou78.com'
   - '+.huyouxiong.com'
   - '+.huyuncdn.com'
   - '+.huyuxx.com'
@@ -29991,6 +29984,7 @@ payload:
   - '+.ipktv.com'
   - '+.ipku.com'
   - '+.iplascloud.com'
+  - '+.iplawyerlyj.com'
   - '+.iplay11g.com'
   - '+.iplaypy.com'
   - '+.iplaysoft.com'
@@ -30728,6 +30722,7 @@ payload:
   - '+.jayfu.tk'
   - '+.jayjw.com'
   - '+.jayme.net'
+  - '+.jayxhj.com'
   - '+.jazzyear.com'
   - '+.jb1000.com'
   - '+.jb51.cc'
@@ -34660,7 +34655,6 @@ payload:
   - '+.lalasky.com'
   - '+.lalawaimai.com'
   - '+.lalkk.com'
-  - '+.lalunalove.com'
   - '+.lamabang.com'
   - '+.lamahui.com'
   - '+.lamaison-arting.com'
@@ -34718,6 +34712,7 @@ payload:
   - '+.langlib.com'
   - '+.langlive.com'
   - '+.langmanzg.com'
+  - '+.langnisen.com'
   - '+.langren001.com'
   - '+.langren8.com'
   - '+.langrencard.com'
@@ -36968,6 +36963,7 @@ payload:
   - '+.lvyuetravel.com'
   - '+.lvzheng.com'
   - '+.lw0591.com'
+  - '+.lw0634.net'
   - '+.lw208.com'
   - '+.lw54.com'
   - '+.lwcj.com'
@@ -38437,6 +38433,7 @@ payload:
   - '+.mikesent-awareness-02.com'
   - '+.mikesent.net'
   - '+.mikewootc.com'
+  - '+.mikger.com'
   - '+.miko007.com'
   - '+.mikoshu.me'
   - '+.miku.ink'
@@ -42298,7 +42295,6 @@ payload:
   - '+.phpspider.org'
   - '+.phpstat.net'
   - '+.phpstudy.net'
-  - '+.phpstudyimg.com'
   - '+.phpv.net'
   - '+.phpvar.com'
   - '+.phpvod.com'
@@ -43238,7 +43234,6 @@ payload:
   - '+.qc-meta.com'
   - '+.qc178.com'
   - '+.qc188.com'
-  - '+.qc56.org'
   - '+.qc6.com'
   - '+.qcc.com'
   - '+.qccip.com'
@@ -43905,7 +43900,6 @@ payload:
   - '+.qipeng.com'
   - '+.qiqici.com'
   - '+.qiqids.com'
-  - '+.qiqilm.com'
   - '+.qiqipu.com'
   - '+.qiqipu.tv'
   - '+.qiqiuyu.com'
@@ -44253,7 +44247,6 @@ payload:
   - '+.qqrizhi.com'
   - '+.qqro.com'
   - '+.qqsgame.com'
-  - '+.qqshark.com'
   - '+.qqshidao.com'
   - '+.qqshuoshuo.com'
   - '+.qqsk.com'
@@ -48078,7 +48071,6 @@ payload:
   - '+.siteapp-static.com'
   - '+.sitekc.com'
   - '+.sites120.com'
-  - '+.sitezj.com'
   - '+.sithc.com'
   - '+.sitiaoyu.com'
   - '+.sitongedu.org'
@@ -48092,7 +48084,6 @@ payload:
   - '+.siwazywimg.com'
   - '+.siwei.me'
   - '+.siweidaotu.com'
-  - '+.siweidaoxiang.com'
   - '+.siweiearth.com'
   - '+.siweikongjian.net'
   - '+.siweiw.com'
@@ -51896,7 +51887,6 @@ payload:
   - '+.tqschool.net'
   - '+.tqw21.com'
   - '+.tqybw.net'
-  - '+.tr518.com'
   - '+.trace4me.com'
   - '+.tracefact.net'
   - '+.traceint.com'
@@ -55433,7 +55423,6 @@ payload:
   - '+.whlido.com'
   - '+.whljyl.com'
   - '+.whlkwy.com'
-  - '+.whlongre.com'
   - '+.whlrhd.com'
   - '+.whly56.com'
   - '+.whlynk.com'
@@ -56222,7 +56211,6 @@ payload:
   - '+.wpcnzz.com'
   - '+.wpdaxue.com'
   - '+.wpengapp.com'
-  - '+.wper.com'
   - '+.wpgdadatong.com'
   - '+.wpgdadawant.com'
   - '+.wphonelife.com'
@@ -56803,6 +56791,7 @@ payload:
   - '+.wzciming.com'
   - '+.wzdai.com'
   - '+.wzdjy.com'
+  - '+.wzdlqj.com'
   - '+.wzdress.com'
   - '+.wzdsb.net'
   - '+.wzexe.com'
@@ -57787,7 +57776,6 @@ payload:
   - '+.xiazaidb.com'
   - '+.xiazaidc.com'
   - '+.xiazaidown.com'
-  - '+.xiazaiduan.com'
   - '+.xiazaiduo.com'
   - '+.xiazaijidi.com'
   - '+.xiazaima.com'
@@ -59362,7 +59350,6 @@ payload:
   - '+.xzforu.com'
   - '+.xzggjyzpw.com'
   - '+.xzgjj.com'
-  - '+.xzh200c.shop'
   - '+.xzhengyida.com'
   - '+.xzhichang.com'
   - '+.xzhizao.com'
@@ -59693,6 +59680,7 @@ payload:
   - '+.ybword.com'
   - '+.ybwzx.com'
   - '+.ybxww.com'
+  - '+.ybzhao.com'
   - '+.ybzkb.com'
   - '+.yc123.com'
   - '+.yc12313.com'
@@ -60276,7 +60264,6 @@ payload:
   - '+.yingfeiyun.com'
   - '+.yingfeng.me'
   - '+.yinghaicar.com'
-  - '+.yinghaozs.com'
   - '+.yinghecloud.com'
   - '+.yingheying.com'
   - '+.yinghezhong.com'
@@ -61521,6 +61508,7 @@ payload:
   - '+.yuantutech.com'
   - '+.yuanu.com'
   - '+.yuanwanw.com'
+  - '+.yuanxinbaoxian.com'
   - '+.yuanxuxu.com'
   - '+.yuanyangcoffee.com'
   - '+.yuanyi.biz'
@@ -64964,7 +64952,6 @@ payload:
   - '+.zzdtec.com'
   - '+.zzdz666.com'
   - '+.zzect.com'
-  - '+.zzenglish.net'
   - '+.zzetao.com'
   - '+.zzfcw.com'
   - '+.zzfly.net'
